--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "dev": "nodemon src/index.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-bedrock-runtime": "^3.535.0",
+    "@koa/bodyparser": "^5.0.0",
+    "@koa/cors": "^5.0.0",
     "@types/koa": "^2.15.0",
     "@types/koa-router": "^7.4.8",
+    "@types/koa__cors": "^5.0.0",
     "koa": "^2.15.1",
     "koa-router": "^12.0.1"
   },
