--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/koa": "^2.15.0",
     "@types/koa-router": "^7.4.8",
     "@types/koa__cors": "^5.0.0",
+    "dotenv": "^16.4.5",
     "koa": "^2.15.1",
     "koa-router": "^12.0.1",
     "pg": "^8.11.3"
