--- a/package.json
+++ b/package.json
@@ -6,22 +6,27 @@
   "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx ts-node src/index.ts",
-    "dev": "nodemon src/index.ts"
+    "start": "npx ts-node -T src/index.ts",
+    "dev": "nodemon src/index.ts",
+    "build": "tsc ."
   },
   "dependencies": {
     "@aws-sdk/client-bedrock-runtime": "^3.535.0",
     "@koa/bodyparser": "^5.0.0",
     "@koa/cors": "^5.0.0",
-    "@types/koa": "^2.15.0",
-    "@types/koa-router": "^7.4.8",
-    "@types/koa__cors": "^5.0.0",
     "dotenv": "^16.4.5",
     "koa": "^2.15.1",
     "koa-router": "^12.0.1",
     "pg": "^8.11.3"
   },
+  "compilerOptions": {
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext"
+  },
   "devDependencies": {
+    "@types/koa": "^2.15.0",
+    "@types/koa-router": "^7.4.8",
+    "@types/koa__cors": "^5.0.0",
     "@types/pg": "^8.11.4",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
