--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "run": "node dist/server/index.js"
   },
   "dependencies": {
+    "@aws-sdk/client-bedrock-agent-runtime": "^3.554.0",
     "@aws-sdk/client-bedrock-runtime": "^3.535.0",
     "@koa/bodyparser": "^5.0.0",
     "@koa/cors": "^5.0.0",
