feat: add webui project feat: reorg project to serve backend and frontend

--- a/.gitignore
+++ b/.gitignore
@@ -89,7 +89,7 @@ out
 
 # Nuxt.js build / generate output
 .nuxt
-dist
+dist/
 
 # Gatsby files
 .cache/
@@ -129,3 +129,14 @@ dist
 .yarn/install-state.gz
 .pnp.*
 .DS_Store
+
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+yarn.lock
